refactor: Make project IDE-agnostic and add production essentials
BREAKING CHANGES:
- Removed all Cursor-specific files (.cursor/ directory)
- Removed VS-CODE-SETUP.md (IDE-agnostic now)
- Changed state-manager to use .speckit/context/ instead of .cursor/context/

Added:
- LICENSE (MIT)
- SPEC.md (project specification template)
- .github/workflows/ci.yml (CI/CD pipeline)
- tests/README.md (test suite infrastructure guide)
- npm scripts: test, lint, format, validate

Fixed:
- API endpoints in .agent-keys.example.json (correct URLs)
- Qwen endpoint: https://dashscope.aliyuncs.com/api/v1
- Gemini endpoint: https://generativelanguage.googleapis.com/v1beta
- Added docs links for each API

Updated:
- MANUAL-WORKFLOW.md (removed Cursor mentions, IDE-agnostic)
- QUICKSTART.md (removed Cursor mentions)
- .gitignore (changed .cursor/context/ to .speckit/context/)
- state-manager.js (updateCursorContext -> updateIDEContext)

Philosophy:
This project is now completely IDE-agnostic. Use any editor/IDE you want:
- VS Code, Neovim, IntelliJ, Sublime, or just terminal
- No special setup required
- Manual copy-paste workflow works everywhere

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ package-lock.json
 
 # SpecKit State (project-specific, don't commit)
 .speckit/state/
-.cursor/context/speckit-*.md
+.speckit/context/
 specs/*/
 
 # Keep example spec
