--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,15 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, staging, develop ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, staging ]
+  workflow_dispatch:
 
 jobs:
-  test:
+  quality_check:
+    name: "Quality Gates"
     runs-on: ubuntu-latest
     
     strategy:
@@ -27,11 +29,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
-    - name: Run linter
-      run: npm run lint || echo "Linter not configured yet"
-    
-    - name: Run tests
-      run: npm test || echo "Tests not implemented yet"
+    - name: Run quality checks
+      run: npm run quality:check || echo "⚠️ Quality checks not fully configured yet"
+      continue-on-error: true
     
     - name: Test orchestrator
       run: npm run speckit:plan -- "CI test task"
@@ -42,6 +42,11 @@ jobs:
         npm run agent:qwen -- implement --task "CI test" || true
         npm run agent:claude -- review --files "test.js" || true
         npm run agent:gemini -- infra setup --type "test" || true
+    
+    - name: Run smoke tests
+      run: |
+        chmod +x scripts/smoke-test.sh
+        bash scripts/smoke-test.sh
 
   validate-config:
     runs-on: ubuntu-latest
@@ -84,7 +89,7 @@ jobs:
     
     - name: Check documentation
       run: |
-        FILES="README.md QUICKSTART.md LICENSE SPEC.md"
+        FILES="README.md QUICKSTART.md LICENSE SPEC.md SECURITY.md DEPLOYMENT_GUIDE.md"
         for file in $FILES; do
           if [ ! -f "$file" ]; then
             echo "❌ Missing: $file"
@@ -95,4 +100,81 @@ jobs:
     
     - name: Check for broken links (TODO)
       run: echo "📝 Link checker not implemented yet"
+  
+  # Staging deployment (customize for your hosting provider)
+  deploy_staging:
+    name: "Deploy to Staging"
+    needs: [quality_check, validate-config]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/staging'
+    environment: staging
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Build
+      run: npm run build || echo "No build step configured"
+    
+    - name: Deploy
+      run: echo "🚀 Configure your deployment here (Vercel, Cloud Run, AWS, etc.)"
+    
+    # Example: Vercel deployment
+    # - name: Deploy to Vercel
+    #   uses: amondnet/vercel-action@v20
+    #   with:
+    #     vercel-token: ${{ secrets.VERCEL_TOKEN }}
+    #     vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+    #     vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+    #     vercel-args: '--prod'
+  
+  # Production deployment (requires manual approval)
+  deploy_production:
+    name: "Deploy to Production"
+    needs: [quality_check, validate-config]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    environment: production
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Build
+      run: npm run build || echo "No build step configured"
+    
+    - name: Deploy
+      run: echo "🚀 Configure your production deployment here"
+    
+    # Example: Cloud Run deployment
+    # - name: Authenticate to Google Cloud
+    #   uses: google-github-actions/auth@v2
+    #   with:
+    #     workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
+    #     service_account: ${{ secrets.SERVICE_ACCOUNT }}
+    #
+    # - name: Deploy to Cloud Run
+    #   run: |
+    #     gcloud run deploy SERVICE_NAME \
+    #       --source . \
+    #       --region REGION \
+    #       --platform managed
 
